# django-setup

./: Makefile  README.rst  pyproject.toml
core/core/utils/: collections.py  misc.py  settings.py
core/project/: settings.py  urls.py
core/project/settings/: __init__.py  base.py  custom.py  envars.py
core/project/settings/templates/: settings.dev.py
