[tool.poetry]
name = "django-setup"
version = "0.1.0"
description = "This is a template for a professional django project setup"
authors = ["Douglas <douglasrdv@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
